FileHandle::printf doesn't build on Windows https://bugs.webkit.org/show_bug.cgi?id=165642

Reviewed by Ryosuke Niwa.

Fix the build -- vasprintf does not exist on Windows, so make
FileHandle::printf a no-op on that platform.

No new tests -- affected facility is currently only used in testing
code and is not user reachable.

* platform/FileHandle.cpp:
(WebCore::FileHandle::printf):


Canonical link: https://commits.webkit.org/183249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209593 268f45cc-cd09-0410-ab3c-d52691b4dbfc